--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="apple-touch-icon" href="logo.png">
 
-    <title>Prism HUD</title>
+    <title>Prism HUD Pro</title>
     <style>
         :root {
             --accent-color: #ffffff;
@@ -26,17 +26,31 @@
             justify-content: center;
             align-items: center;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            transform: scaleX(-1); /* HUD Mirror */
+            transform: scaleX(-1);
             padding: env(safe-area-inset-top);
             transition: color 0.4s ease;
         }
 
+        /* CINEMATIC ENTRANCE */
         #hud-container {
             text-align: center;
-            will-change: transform;
+            will-change: transform, opacity, filter;
+            animation: prismEntrance 1.8s cubic-bezier(0.22, 1, 0.36, 1);
         }
 
-        /* LEMON MILK STYLE CLOCK */
+        @keyframes prismEntrance {
+            from { 
+                opacity: 0; 
+                transform: scale(0.9) translateY(20px); 
+                filter: blur(10px);
+            }
+            to { 
+                opacity: 1; 
+                transform: scale(1) translateY(0); 
+                filter: blur(0);
+            }
+        }
+
         #clock {
             font-size: var(--clock-size);
             font-weight: 900;
@@ -44,10 +58,9 @@
             letter-spacing: -4px;
             line-height: 0.85;
             margin-bottom: 0.8rem;
-            filter: drop-shadow(0 0 12px rgba(255,255,255,0.1));
+            filter: drop-shadow(0 0 12px rgba(255,255,255,0.15));
         }
 
-        /* CLEAN WEATHER UI */
         #weather-box {
             display: flex;
             align-items: center;
@@ -68,7 +81,6 @@
 
         #temp { font-size: 2.2rem; font-weight: 200; }
 
-        /* MINIMALIST GEAR ICON */
         #settings-trigger {
             position: absolute;
             bottom: 40px;
@@ -83,22 +95,22 @@
             border-radius: 50%;
         }
 
-        /* PREMIUM GLASS SETTINGS PANEL */
         #settings-panel {
             position: absolute;
-            background: rgba(20, 20, 20, 0.9);
-            -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
+            background: rgba(20, 20, 20, 0.95);
+            -webkit-backdrop-filter: blur(25px);
+            backdrop-filter: blur(25px);
             width: 85%;
             max-width: 360px;
             padding: 30px;
             border-radius: 28px;
-            transform: scaleX(-1); /* Un-mirror */
+            transform: scaleX(-1);
             display: none;
             flex-direction: column;
             gap: 20px;
             border: 1px solid rgba(255,255,255,0.1);
             z-index: 1000;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.8);
         }
 
         h3 { margin: 0; font-size: 0.9rem; letter-spacing: 2px; opacity: 0.5; }
@@ -124,13 +136,14 @@
             border-radius: 12px;
             font-weight: 800;
             margin-top: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
     <div id="hud-container">
-        <div id="clock">--:--</div>
+        <div id="clock">00:00</div>
         <div id="weather-box">
             <div id="icon-container"></div>
             <span id="temp">--°</span>
@@ -144,16 +157,15 @@
     <div id="settings-panel">
         <div style="display:flex; justify-content:space-between;">
             <h3>PRISM CONFIG</h3>
-            <span onclick="toggleSettings()" style="cursor:pointer; font-weight:bold; color:red;">[X]</span>
+            <span onclick="toggleSettings()" style="cursor:pointer; font-weight:bold; color:#ff4444;">DISMISS</span>
         </div>
         <div class="group"><label>City</label><input type="text" id="city-in" placeholder="Calgary"></div>
-        <div class="group"><label>Color</label><input type="color" id="color-in" value="#ffffff" style="width:100%; height:44px; border:none; background:none;"></div>
-        <div class="group"><label>Size</label><input type="range" id="size-in" min="4" max="14" value="8.5" step="0.1"></div>
-        <button class="apply-btn" onclick="applySettings()">SAVE CHANGES</button>
+        <div class="group"><label>HUD Accent</label><input type="color" id="color-in" value="#ffffff" style="width:100%; height:44px; border:none; background:none;"></div>
+        <div class="group"><label>Display Scale</label><input type="range" id="size-in" min="4" max="14" value="8.5" step="0.1"></div>
+        <button class="apply-btn" onclick="applySettings()">APPLY SYSTEM CHANGES</button>
     </div>
 
     <script>
-        // CLOCK - RUNS IMMEDIATELY
         function updateClock() {
             const now = new Date();
             document.getElementById('clock').innerText = 
@@ -162,7 +174,6 @@
         setInterval(updateClock, 1000);
         updateClock();
 
-        // WEATHER
         const icons = {
             clear: `<svg class="weather-icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2m0 18v2M4.22 4.22l1.42 1.42m12.72 12.72l1.42 1.42M1 12h2m18 0h2m-1.42-7.78l-1.42 1.42M5.64 18.36l-1.42 1.42"></path></svg>`,
             cloudy: `<svg class="weather-icon" viewBox="0 0 24 24"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"></path></svg>`,
@@ -188,7 +199,6 @@
         fetchWeather();
         setInterval(fetchWeather, 600000);
 
-        // UI
         function toggleSettings() {
             const p = document.getElementById('settings-panel');
             p.style.display = (p.style.display === 'flex') ? 'none' : 'flex';
@@ -205,7 +215,12 @@
             toggleSettings();
         }
 
-        // Anti-Burn-In
+        // Screen Stay-Awake & Pixel Shift
+        let wakeLock = null;
+        document.addEventListener('click', async () => {
+            if(!wakeLock && 'wakeLock' in navigator) { wakeLock = await navigator.wakeLock.request('screen'); }
+        });
+
         setInterval(() => {
             const x = Math.floor(Math.random() * 6) - 3;
             const y = Math.floor(Math.random() * 6) - 3;
