--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Prism OS</title>
+    <title>Prism OS Pro</title>
     <style>
         :root {
             --accent: #ffffff;
-            --bg-dim: rgba(0, 0, 0, 0.8);
-            --blur: blur(25px);
+            --panel-bg: rgba(15, 15, 15, 0.95);
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -27,7 +26,7 @@
             align-items: center;
             font-family: -apple-system, system-ui, sans-serif;
             overflow: hidden;
-            transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         /* MIRROR LOGIC */
@@ -36,7 +35,13 @@
         #main-display {
             text-align: center;
             z-index: 1;
-            transition: opacity 0.5s;
+            /* Entrance Animation */
+            animation: prismEntrance 1.8s cubic-bezier(0.22, 1, 0.36, 1);
+        }
+
+        @keyframes prismEntrance {
+            from { opacity: 0; transform: scale(0.9) translateY(20px); filter: blur(10px); }
+            to { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
         }
 
         #clock {
@@ -46,7 +51,6 @@
             letter-spacing: -5px;
             line-height: 0.8;
             margin-bottom: 20px;
-            filter: drop-shadow(0 0 15px rgba(255,255,255,0.2));
         }
 
         #weather {
@@ -55,13 +59,11 @@
             justify-content: center;
             gap: 15px;
             opacity: 0.8;
-            font-weight: 200;
             font-size: 2.5rem;
+            font-weight: 200;
         }
 
-        .w-icon { width: 48px; height: 48px; stroke: currentColor; fill: none; stroke-width: 1.5; }
-
-        /* NAV DRAWER */
+        /* SETTINGS DRAWER */
         #nav-trigger {
             position: absolute;
             bottom: 30px;
@@ -73,12 +75,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            cursor: pointer;
             z-index: 100;
-            opacity: 0.3;
-            transition: opacity 0.3s;
+            cursor: pointer;
+            /* Ensure the trigger is always clickable/visible normally */
+            transform: inherit; 
         }
-        #nav-trigger:hover { opacity: 1; }
 
         #side-panel {
             position: fixed;
@@ -86,41 +87,56 @@
             top: 0;
             width: 300px;
             height: 100%;
-            background: rgba(15, 15, 15, 0.9);
-            backdrop-filter: var(--blur);
-            padding: 40px 20px;
-            transition: right 0.4s ease;
+            background: var(--panel-bg);
+            -webkit-backdrop-filter: blur(30px);
+            backdrop-filter: blur(30px);
+            padding: 40px 25px;
+            transition: right 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: 200;
             display: flex;
             flex-direction: column;
-            gap: 25px;
+            gap: 30px;
             border-left: 1px solid rgba(255,255,255,0.1);
+        }
+
+        /* THE FIX: This ensures the panel flips back if the body is flipped */
+        .hud-mode #side-panel, .hud-mode #nav-trigger, .hud-mode #overlay-text {
+            transform: scaleX(-1);
         }
 
         #side-panel.open { right: 0; }
 
         /* UI ELEMENTS */
-        .control-group { display: flex; flex-direction: column; gap: 8px; }
-        label { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; opacity: 0.5; }
+        .control-group { display: flex; flex-direction: column; gap: 10px; }
+        label { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; opacity: 0.4; font-weight: 700; }
         
-        button {
-            background: rgba(255,255,255,0.1);
-            border: 1px solid rgba(255,255,255,0.2);
-            color: white;
-            padding: 12px;
+        .btn-toggle {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            background: rgba(255,255,255,0.05);
+            padding: 4px;
             border-radius: 12px;
+        }
+
+        button {
+            background: transparent;
+            border: none;
+            color: white;
+            padding: 10px;
+            border-radius: 8px;
             font-weight: 600;
+            font-size: 0.8rem;
             cursor: pointer;
+            transition: all 0.2s;
         }
         button.active { background: #fff; color: #000; }
 
-        input[type="file"] { display: none; }
         .file-label {
-            padding: 12px;
-            background: rgba(255,255,255,0.05);
-            border: 1px dashed rgba(255,255,255,0.3);
+            padding: 20px;
+            background: rgba(255,255,255,0.03);
+            border: 1px dashed rgba(255,255,255,0.2);
             text-align: center;
-            border-radius: 12px;
+            border-radius: 15px;
             font-size: 0.8rem;
             cursor: pointer;
         }
@@ -128,7 +144,7 @@
         #overlay {
             position: fixed;
             top:0; left:0; width:100%; height:100%;
-            background: rgba(0,0,0,0.5);
+            background: rgba(0,0,0,0.4);
             display: none;
             z-index: 150;
         }
@@ -141,41 +157,45 @@
     <div id="main-display">
         <div id="clock">00:00</div>
         <div id="weather">
-            <div id="icon"></div>
+            <div id="icon-container"></div>
             <span id="temp">--°</span>
         </div>
     </div>
 
-    <div id="nav-trigger" onclick="toggleNav()">⚙️</div>
+    <div id="nav-trigger" onclick="toggleNav()">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+    </div>
 
     <div id="side-panel">
-        <h2 style="margin:0; font-size: 1.2rem;">PRISM CONFIG</h2>
+        <h2 style="margin:0; font-size: 1.1rem; letter-spacing: 2px;">PRISM OS</h2>
         
         <div class="control-group">
-            <label>View Mode</label>
-            <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+            <label>View Orientation</label>
+            <div class="btn-toggle">
                 <button id="btn-hud" class="active" onclick="setMode(true)">HUD</button>
                 <button id="btn-norm" onclick="setMode(false)">REGULAR</button>
             </div>
         </div>
 
         <div class="control-group">
-            <label>Background</label>
-            <label for="bg-upload" class="file-label">Upload Image</label>
+            <label>Custom Backdrop</label>
+            <label for="bg-upload" class="file-label">Choose Image</label>
             <input type="file" id="bg-upload" accept="image/*" onchange="handleBg(event)">
-            <button onclick="clearBg()" style="font-size: 0.7rem; background: transparent; border: none; color: red;">Reset to Black</button>
+            <button onclick="clearBg()" style="color: #ff4444; font-size: 0.7rem; margin-top: -5px;">Reset to Deep Black</button>
         </div>
 
         <div class="control-group">
-            <label>Accent Color</label>
-            <input type="color" id="color-pick" onchange="updateColor(this.value)" style="width:100%; height:40px; background:none; border:none;">
+            <label>Interface Theme</label>
+            <input type="color" id="color-pick" onchange="updateColor(this.value)" style="width:100%; height:45px; background:none; border:none; cursor:pointer;">
         </div>
 
-        <button onclick="toggleNav()" style="margin-top: auto; background: #fff; color: #000;">CLOSE</button>
+        <div class="control-group" style="margin-top:auto;">
+            <button onclick="toggleNav()" style="background: #fff; color: #000; padding: 15px; border-radius: 14px;">DISMISS CONFIG</button>
+        </div>
     </div>
 
     <script>
-        // CORE LOGIC
+        // Initialize Clock
         function updateClock() {
             const now = new Date();
             document.getElementById('clock').innerText = 
@@ -184,24 +204,21 @@
         setInterval(updateClock, 1000);
         updateClock();
 
-        // MODE SWITCHER
+        // Mode Management
         function setMode(isHud) {
             const body = document.getElementById('app-body');
-            const panel = document.getElementById('side-panel');
             if(isHud) {
                 body.classList.add('hud-mode');
-                panel.style.transform = "scaleX(-1)";
                 document.getElementById('btn-hud').classList.add('active');
                 document.getElementById('btn-norm').classList.remove('active');
             } else {
                 body.classList.remove('hud-mode');
-                panel.style.transform = "scaleX(1)";
                 document.getElementById('btn-norm').classList.add('active');
                 document.getElementById('btn-hud').classList.remove('active');
             }
         }
 
-        // BACKGROUND HANDLER
+        // Background Logic
         function handleBg(e) {
             const reader = new FileReader();
             reader.onload = function(event) {
@@ -216,30 +233,30 @@
             localStorage.removeItem('prism_bg');
         }
 
-        // LOAD SAVED
-        window.onload = () => {
-            const savedBg = localStorage.getItem('prism_bg');
-            if(savedBg) document.body.style.backgroundImage = `url(${savedBg})`;
-            fetchWeather();
-        };
-
         function toggleNav() {
-            document.getElementById('side-panel').classList.toggle('open');
-            document.getElementById('overlay').style.display = 
-                document.getElementById('side-panel').classList.contains('open') ? 'block' : 'none';
+            const panel = document.getElementById('side-panel');
+            const overlay = document.getElementById('overlay');
+            panel.classList.toggle('open');
+            overlay.style.display = panel.classList.contains('open') ? 'block' : 'none';
         }
 
         function updateColor(val) {
             document.documentElement.style.setProperty('--accent', val);
         }
 
-        // WEATHER (Open-Meteo)
+        // Load Persistent Data
+        window.onload = () => {
+            const savedBg = localStorage.getItem('prism_bg');
+            if(savedBg) document.body.style.backgroundImage = `url(${savedBg})`;
+            fetchWeather();
+        };
+
         async function fetchWeather() {
             try {
                 const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=51.05&longitude=-114.07&current=temperature_2m,weather_code`).then(r => r.json());
                 document.getElementById('temp').innerText = Math.round(res.current.temperature_2m) + "°";
-                document.getElementById('icon').innerHTML = `<svg class="w-icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2m0 18v2M4.22 4.22l1.42 1.42m12.72 12.72l1.42 1.42M1 12h2m18 0h2m-1.42-7.78l-1.42 1.42M5.64 18.36l-1.42 1.42"></path></svg>`;
-            } catch (e) { console.error("Weather offline"); }
+                document.getElementById('icon-container').innerHTML = `<svg style="width:40px; height:40px; stroke:currentColor; fill:none; stroke-width:1.5;" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2m0 18v2M4.22 4.22l1.42 1.42m12.72 12.72l1.42 1.42M1 12h2m18 0h2m-1.42-7.78l-1.42 1.42M5.64 18.36l-1.42 1.42"></path></svg>`;
+            } catch (e) { console.error("Weather Service Offline"); }
         }
     </script>
 </body>
