--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Prism OS Executive</title>
+    <title>Prism OS Fixed</title>
     <style>
         :root {
             --accent: #007AFF; 
-            --global-scale: 1;
-            --clock-pos: 0px;
-            --date-pos: 0px;
-            --weather-pos: 0px;
             --smooth-ease: cubic-bezier(0.4, 0, 0.2, 1);
             --slow-ease: cubic-bezier(0.65, 0, 0.35, 1);
         }
@@ -33,13 +29,12 @@
             overflow: hidden;
         }
 
-        /* STARTUP ANIMATION */
         @keyframes prismEntrance {
-            0% { opacity: 0; transform: scale(0.92) translateY(30px); filter: blur(15px); }
-            100% { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
+            0% { opacity: 0; filter: blur(15px); }
+            100% { opacity: 1; filter: blur(0); }
         }
 
-        /* FIXED: Using a wrapper to combine Flip and Scale without conflicts */
+        /* The container that handles Scale and Mirroring via JS */
         #hud-master {
             display: flex;
             flex-direction: column;
@@ -47,29 +42,25 @@
             justify-content: center;
             transition: transform 1.2s var(--slow-ease);
             animation: prismEntrance 1.8s var(--slow-ease) forwards;
-            /* Combined scale and mirror */
-            transform: scale(var(--global-scale)) scaleX(var(--mirror-val, -1));
+            will-change: transform;
         }
 
         #hud-container { text-align: center; }
 
-        /* WIDGETS */
         .widget { transition: transform 0.5s var(--smooth-ease), opacity 0.4s ease; color: var(--accent); }
         
-        /* FIXED: Padding-right added to prevent italic clipping */
         #clock { 
             font-size: clamp(5rem, 25vw, 12rem); 
             font-weight: 900; 
             font-style: italic; 
             letter-spacing: -4px; 
             line-height: 0.8; 
-            padding-right: 0.2em; 
+            padding-right: 0.3em; /* Aggressive clipping fix */
         }
 
         #date { font-size: 1.4rem; text-transform: uppercase; letter-spacing: 8px; opacity: 0.6; font-weight: 300; margin-top: 20px; }
         #weather-widget { display: flex; align-items: center; justify-content: center; gap: 20px; opacity: 0.8; font-size: 2.4rem; font-weight: 200; margin-top: 15px;}
 
-        /* INVERTED SETTINGS TRIGGER */
         #nav-trigger {
             position: absolute; bottom: 40px; right: 40px;
             width: 65px; height: 65px;
@@ -80,35 +71,29 @@
         }
         #nav-trigger.visible { opacity: 1; }
 
-        /* SETTINGS PANEL (Smooth Slide) */
         #side-panel {
             position: fixed; right: -360px; top: 0; width: 340px; height: 100%;
             background: rgba(10, 10, 10, 0.95); backdrop-filter: blur(60px);
             -webkit-backdrop-filter: blur(60px); padding: 40px 25px; 
             transition: right 0.5s var(--smooth-ease); z-index: 2000; overflow-y: auto;
-            border-left: 1px solid rgba(255,255,255,0.1);
+            border-left: 1px solid rgba(255,255,255,0.1); color: #fff;
         }
         #side-panel.open { right: 0; }
 
         .panel-content { display: flex; flex-direction: column; gap: 20px; padding-bottom: 80px; }
-
-        /* GLOW/SHADOW OPTIONS */
         .control-group { 
             padding: 18px; background: rgba(255,255,255,0.03);
             border-radius: 20px; border: 1px solid rgba(255,255,255,0.05);
             transition: all 0.3s var(--smooth-ease);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
         .control-group:hover {
             background: rgba(255,255,255,0.06); border-color: rgba(255,255,255,0.2);
-            box-shadow: 0 0 20px rgba(255,255,255,0.05), 0 10px 30px rgba(0,0,0,0.5);
             transform: translateY(-2px);
         }
 
         .row { display: flex; justify-content: space-between; align-items: center; }
         label { font-size: 0.65rem; text-transform: uppercase; letter-spacing: 1.5px; opacity: 0.5; font-weight: 800; }
 
-        /* FIXED: iOS Switch Dynamic Color */
         .ios-switch {
             position: relative; width: 50px; height: 28px;
             background: rgba(255,255,255,0.1); border-radius: 20px;
@@ -117,14 +102,13 @@
         .ios-switch::after {
             content: ''; position: absolute; top: 2px; left: 2px;
             width: 24px; height: 24px; background: #fff;
-            border-radius: 50%; box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-            transition: transform 0.3s var(--smooth-ease);
+            border-radius: 50%; transition: transform 0.3s var(--smooth-ease);
         }
         .ios-switch.active { background: var(--accent); }
         .ios-switch.active::after { transform: translateX(22px); }
 
         input[type="range"] { -webkit-appearance: none; width: 100%; height: 4px; background: rgba(255,255,255,0.1); border-radius: 2px; }
-        input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; height: 20px; width: 20px; background: #fff; border-radius: 50%; }
+        input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; height: 20px; width: 20px; background: #fff; border-radius: 50%; cursor: pointer;}
 
         #overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); display: none; z-index: 1500; }
         .reset-btn { color: #ff4444; background: none; border: none; font-weight: 700; cursor: pointer; padding: 10px; margin-top: 10px; opacity: 0.6; text-transform: uppercase; width: 100%; font-size: 0.75rem; }
@@ -134,7 +118,7 @@
 
     <div id="overlay" onclick="toggleNav()"></div>
 
-    <div id="hud-master" style="--mirror-val: -1;">
+    <div id="hud-master">
         <div id="hud-container">
             <div id="clock-widget" class="widget">
                 <div id="clock">00:00</div>
@@ -159,7 +143,7 @@
             
             <div class="control-group">
                 <div class="row">
-                    <label>HUD Projection</label>
+                    <label>HUD Projection (Mirror)</label>
                     <div id="sw-mirror" class="ios-switch active" onclick="toggleMirror()"></div>
                 </div>
             </div>
@@ -172,7 +156,7 @@
             </div>
 
             <div class="control-group">
-                <div class="row" style="margin-bottom:10px;">
+                <div class="row">
                     <label>Clock Widget</label>
                     <div id="sw-clock" class="ios-switch active" onclick="toggleWidget('clock')"></div>
                 </div>
@@ -180,7 +164,7 @@
             </div>
 
             <div class="control-group">
-                <div class="row" style="margin-bottom:10px;">
+                <div class="row">
                     <label>Date Widget</label>
                     <div id="sw-date" class="ios-switch active" onclick="toggleWidget('date')"></div>
                 </div>
@@ -188,7 +172,7 @@
             </div>
 
             <div class="control-group">
-                <div class="row" style="margin-bottom:10px;">
+                <div class="row">
                     <label>Weather Widget</label>
                     <div id="sw-weather" class="ios-switch active" onclick="toggleWidget('weather')"></div>
                 </div>
@@ -197,13 +181,13 @@
 
             <div class="control-group">
                 <label>System Scale</label>
-                <input type="range" min="0.5" max="1.5" step="0.01" value="1" oninput="globalScale(this.value)">
+                <input type="range" min="0.2" max="2.0" step="0.01" value="1.0" oninput="updateScale(this.value)">
             </div>
 
             <div class="control-group">
                 <label>Accent & Backdrop</label>
                 <div class="row" style="margin-top:10px;">
-                    <span style="font-size:0.8rem; font-weight:600;">Color Picker</span>
+                    <span style="font-size:0.8rem; font-weight:600;">Accent Color</span>
                     <input type="color" value="#007AFF" onchange="updateColor(this.value)" style="border:none; background:none; width:45px; height:30px; cursor:pointer;">
                 </div>
                 <button class="file-label" style="background:rgba(255,255,255,0.1); border:1px solid rgba(255,255,255,0.1); color:#fff; padding:12px; border-radius:12px; font-size:0.75rem; width:100%; margin-top:15px; cursor:pointer;" onclick="document.getElementById('bg-up').click()">Import Backdrop</button>
@@ -216,14 +200,41 @@
     </div>
 
     <script>
-        let is24h = true;
-        let fadeTimeout;
+        // CORE STATE
+        let state = {
+            scale: 1.0,
+            mirrored: true,
+            is24h: true
+        };
 
+        const masterEl = document.getElementById('hud-master');
+
+        // CENTRAL RENDER FUNCTION - Ensures scale and flip never fight
+        function applyMasterTransforms() {
+            const mirrorX = state.mirrored ? -1 : 1;
+            masterEl.style.transform = `scale(${state.scale}) scaleX(${mirrorX})`;
+        }
+
+        function updateScale(val) {
+            state.scale = val;
+            applyMasterTransforms();
+        }
+
+        function toggleMirror() {
+            state.mirrored = !state.mirrored;
+            document.getElementById('sw-mirror').classList.toggle('active', state.mirrored);
+            applyMasterTransforms();
+        }
+
+        // Run once on load to set initial state
+        applyMasterTransforms();
+
+        // WIDGET LOGIC
         function updateClock() {
             const now = new Date();
             let h = now.getHours();
             const m = String(now.getMinutes()).padStart(2, '0');
-            if (!is24h) h = h % 12 || 12;
+            if (!state.is24h) h = h % 12 || 12;
             document.getElementById('clock').innerText = `${String(h).padStart(2, '0')}:${m}`;
             const opt = { weekday: 'long', month: 'short', day: '2-digit' };
             document.getElementById('date').innerText = now.toLocaleDateString('en-US', opt).toUpperCase();
@@ -231,19 +242,9 @@
         setInterval(updateClock, 1000); updateClock();
 
         function toggle24h() {
-            is24h = !is24h;
-            document.getElementById('sw-24h').classList.toggle('active', is24h);
+            state.is24h = !state.is24h;
+            document.getElementById('sw-24h').classList.toggle('active', state.is24h);
             updateClock();
-        }
-
-        // FIXED: Explicitly sets a custom CSS variable for mirror value
-        function toggleMirror() {
-            const master = document.getElementById('hud-master');
-            const sw = document.getElementById('sw-mirror');
-            const currentVal = getComputedStyle(master).getPropertyValue('--mirror-val').trim();
-            const newVal = currentVal === "-1" ? "1" : "-1";
-            master.style.setProperty('--mirror-val', newVal);
-            sw.classList.toggle('active', newVal === "-1");
         }
 
         function toggleWidget(type) {
@@ -251,11 +252,6 @@
             const sw = document.getElementById(`sw-${type}`);
             const isVisible = sw.classList.toggle('active');
             el.style.opacity = isVisible ? '1' : '0';
-        }
-
-        // FIXED: Force update on the root element
-        function globalScale(v) {
-            document.documentElement.style.setProperty('--global-scale', v);
         }
 
         function nudge(t, v) { 
@@ -272,6 +268,8 @@
             r.readAsDataURL(e.target.files[0]);
         }
 
+        // UI HELPERS
+        let fadeTimeout;
         function wakeUI() {
             const t = document.getElementById('nav-trigger');
             t.classList.add('visible');
