--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Prism OS Fixed</title>
+    <title>Prism OS Final</title>
     <style>
         :root {
             --accent: #007AFF; 
             --smooth-ease: cubic-bezier(0.4, 0, 0.2, 1);
             --slow-ease: cubic-bezier(0.65, 0, 0.35, 1);
+            --widget-shadow: 0px 0px 10px rgba(0,0,0,0.5); /* Default shadow */
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
@@ -34,7 +35,6 @@
             100% { opacity: 1; filter: blur(0); }
         }
 
-        /* The container that handles Scale and Mirroring via JS */
         #hud-master {
             display: flex;
             flex-direction: column;
@@ -47,7 +47,12 @@
 
         #hud-container { text-align: center; }
 
-        .widget { transition: transform 0.5s var(--smooth-ease), opacity 0.4s ease; color: var(--accent); }
+        /* WIDGETS with dynamic shadow */
+        .widget { 
+            transition: transform 0.5s var(--smooth-ease), opacity 0.4s ease; 
+            color: var(--accent); 
+            filter: drop-shadow(var(--widget-shadow));
+        }
         
         #clock { 
             font-size: clamp(5rem, 25vw, 12rem); 
@@ -55,21 +60,26 @@
             font-style: italic; 
             letter-spacing: -4px; 
             line-height: 0.8; 
-            padding-right: 0.3em; /* Aggressive clipping fix */
+            padding-right: 0.3em; 
         }
 
-        #date { font-size: 1.4rem; text-transform: uppercase; letter-spacing: 8px; opacity: 0.6; font-weight: 300; margin-top: 20px; }
+        #date { font-size: 1.4rem; text-transform: uppercase; letter-spacing: 8px; opacity: 0.8; font-weight: 300; margin-top: 20px; }
         #weather-widget { display: flex; align-items: center; justify-content: center; gap: 20px; opacity: 0.8; font-size: 2.4rem; font-weight: 200; margin-top: 15px;}
 
+        /* FIXED: 20% Opacity Trigger */
         #nav-trigger {
             position: absolute; bottom: 40px; right: 40px;
             width: 65px; height: 65px;
-            background: #000; border: 2px solid rgba(255,255,255,0.1);
+            background: rgba(0, 0, 0, 0.2); /* 20% Opacity */
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255,255,255,0.1);
             border-radius: 50%; display: flex; justify-content: center; align-items: center;
-            z-index: 1000; cursor: pointer; transition: opacity 0.8s var(--smooth-ease);
+            z-index: 1000; cursor: pointer; transition: opacity 0.8s var(--smooth-ease), background 0.3s;
             opacity: 0; color: #fff;
         }
         #nav-trigger.visible { opacity: 1; }
+        #nav-trigger:hover { background: rgba(255, 255, 255, 0.1); }
 
         #side-panel {
             position: fixed; right: -360px; top: 0; width: 340px; height: 100%;
@@ -84,16 +94,12 @@
         .control-group { 
             padding: 18px; background: rgba(255,255,255,0.03);
             border-radius: 20px; border: 1px solid rgba(255,255,255,0.05);
-            transition: all 0.3s var(--smooth-ease);
-        }
-        .control-group:hover {
-            background: rgba(255,255,255,0.06); border-color: rgba(255,255,255,0.2);
-            transform: translateY(-2px);
         }
 
         .row { display: flex; justify-content: space-between; align-items: center; }
         label { font-size: 0.65rem; text-transform: uppercase; letter-spacing: 1.5px; opacity: 0.5; font-weight: 800; }
 
+        /* iOS Toggle Switch */
         .ios-switch {
             position: relative; width: 50px; height: 28px;
             background: rgba(255,255,255,0.1); border-radius: 20px;
@@ -107,7 +113,7 @@
         .ios-switch.active { background: var(--accent); }
         .ios-switch.active::after { transform: translateX(22px); }
 
-        input[type="range"] { -webkit-appearance: none; width: 100%; height: 4px; background: rgba(255,255,255,0.1); border-radius: 2px; }
+        input[type="range"] { -webkit-appearance: none; width: 100%; height: 4px; background: rgba(255,255,255,0.1); border-radius: 2px; margin-top: 10px; }
         input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; height: 20px; width: 20px; background: #fff; border-radius: 50%; cursor: pointer;}
 
         #overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); display: none; z-index: 1500; }
@@ -134,7 +140,7 @@
     </div>
 
     <div id="nav-trigger" onclick="toggleNav(event)">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
     </div>
 
     <div id="side-panel">
@@ -156,8 +162,13 @@
             </div>
 
             <div class="control-group">
+                <label>Widget Shadow Intensity</label>
+                <input type="range" min="0" max="40" value="10" oninput="updateShadow(this.value)">
+            </div>
+
+            <div class="control-group">
                 <div class="row">
-                    <label>Clock Widget</label>
+                    <label>Clock Pos</label>
                     <div id="sw-clock" class="ios-switch active" onclick="toggleWidget('clock')"></div>
                 </div>
                 <input type="range" min="-250" max="250" value="0" oninput="nudge('clock', this.value)">
@@ -165,18 +176,10 @@
 
             <div class="control-group">
                 <div class="row">
-                    <label>Date Widget</label>
+                    <label>Date Pos</label>
                     <div id="sw-date" class="ios-switch active" onclick="toggleWidget('date')"></div>
                 </div>
                 <input type="range" min="-250" max="250" value="0" oninput="nudge('date', this.value)">
-            </div>
-
-            <div class="control-group">
-                <div class="row">
-                    <label>Weather Widget</label>
-                    <div id="sw-weather" class="ios-switch active" onclick="toggleWidget('weather')"></div>
-                </div>
-                <input type="range" min="-250" max="250" value="0" oninput="nudge('weather', this.value)">
             </div>
 
             <div class="control-group">
@@ -185,22 +188,21 @@
             </div>
 
             <div class="control-group">
-                <label>Accent & Backdrop</label>
+                <label>Theme & Backdrop</label>
                 <div class="row" style="margin-top:10px;">
                     <span style="font-size:0.8rem; font-weight:600;">Accent Color</span>
                     <input type="color" value="#007AFF" onchange="updateColor(this.value)" style="border:none; background:none; width:45px; height:30px; cursor:pointer;">
                 </div>
-                <button class="file-label" style="background:rgba(255,255,255,0.1); border:1px solid rgba(255,255,255,0.1); color:#fff; padding:12px; border-radius:12px; font-size:0.75rem; width:100%; margin-top:15px; cursor:pointer;" onclick="document.getElementById('bg-up').click()">Import Backdrop</button>
+                <button class="file-label" style="background:rgba(255,255,255,0.1); border:1px solid rgba(255,255,255,0.1); color:#fff; padding:12px; border-radius:12px; font-size:0.75rem; width:100%; margin-top:15px; cursor:pointer;" onclick="document.getElementById('bg-up').click()">Upload Photo</button>
                 <input type="file" id="bg-up" hidden onchange="handleBg(event)">
             </div>
 
-            <button onclick="location.reload()" class="reset-btn">Set to Defaults</button>
-            <button onclick="toggleNav()" style="background:#fff; color:#000; padding:18px; border-radius:15px; font-weight:800; border:none; margin-top:10px; cursor:pointer;">Dismiss</button>
+            <button onclick="location.reload()" class="reset-btn">Reset System</button>
+            <button onclick="toggleNav()" style="background:#fff; color:#000; padding:18px; border-radius:15px; font-weight:800; border:none; margin-top:10px; cursor:pointer;">Close</button>
         </div>
     </div>
 
     <script>
-        // CORE STATE
         let state = {
             scale: 1.0,
             mirrored: true,
@@ -209,7 +211,6 @@
 
         const masterEl = document.getElementById('hud-master');
 
-        // CENTRAL RENDER FUNCTION - Ensures scale and flip never fight
         function applyMasterTransforms() {
             const mirrorX = state.mirrored ? -1 : 1;
             masterEl.style.transform = `scale(${state.scale}) scaleX(${mirrorX})`;
@@ -226,10 +227,12 @@
             applyMasterTransforms();
         }
 
-        // Run once on load to set initial state
-        applyMasterTransforms();
+        // NEW: Customizable Shadows
+        function updateShadow(val) {
+            const shadowStr = `0px 0px ${val}px rgba(0,0,0,0.8)`;
+            document.documentElement.style.setProperty('--widget-shadow', shadowStr);
+        }
 
-        // WIDGET LOGIC
         function updateClock() {
             const now = new Date();
             let h = now.getHours();
@@ -264,11 +267,14 @@
         
         function handleBg(e) {
             const r = new FileReader();
-            r.onload = (ev) => { document.body.style.backgroundImage = `url(${ev.target.result})`; };
+            r.onload = (ev) => { 
+                document.body.style.backgroundImage = `url(${ev.target.result})`; 
+                // Defaulting shadow to be visible on non-black bgs
+                updateShadow(15);
+            };
             r.readAsDataURL(e.target.files[0]);
         }
 
-        // UI HELPERS
         let fadeTimeout;
         function wakeUI() {
             const t = document.getElementById('nav-trigger');
@@ -287,14 +293,7 @@
             if (!isOpen) wakeUI();
         }
 
-        async function fetchW() {
-            try {
-                const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=51.05&longitude=-114.07&current=temperature_2m`).then(r => r.json());
-                document.getElementById('temp').innerText = Math.round(res.current.temperature_2m) + "°";
-                document.getElementById('icon-container').innerHTML = `<svg style="width:40px; height:40px; stroke:currentColor; fill:none; stroke-width:1.5;" viewBox="0 0 24 24"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"></path></svg>`;
-            } catch (e) {}
-        }
-        fetchW();
+        applyMasterTransforms();
     </script>
 </body>
 </html>
