--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </div>
             
             <div class="control-group">
-                <label>Weather City</label>
+                <label>City for Weather</label>
                 <input type="text" id="city-input" placeholder="Search City..." oninput="searchCities(this.value)">
                 <div id="weather-results"></div>
             </div>
