--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="logo.png">
     <link rel="apple-touch-icon" href="logo.png">
     
-    <title>Prism OS Final</title>
+    <title>Prism OS</title>
     <style>
         :root {
             --accent: #007AFF; 
